force-app/main/default/objects/New_Employee_Info__c/New_Employee_Info__c.object-meta.xml
<CustomObject>
    <label>New Employee Info</label>
    <nameField>
        <displayFormat>NEI-{00000}</displayFormat>
        <label>New Employee Info Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>New Employee Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>