force-app/main/default/objects/New_Employee_Info__c/fields/I_have_another_job_or_income__c.field-meta.xml
<CustomField>
    <fullName>I_have_another_job_or_income__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Choose this option if:
• you have another job and/or
• you’re in receipt of a State, Works
or Private Pension</inlineHelpText>
    <label>I have another job or income</label>
    <type>Checkbox</type>
</CustomField>