force-app/main/default/objects/New_Employee_Info__c/fields/National_Insurance_Number__c.field-meta.xml
<CustomField>
    <fullName>National_Insurance_Number__c</fullName>
    <label>National Insurance Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>