force-app/main/default/objects/New_Employee_Info__c/fields/Since_6_April_I_have_had_another_job_but__c.field-meta.xml
<CustomField>
    <fullName>Since_6_April_I_have_had_another_job_but__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Since 6 April I have had another job
but I do not have a P45. And/or since
the 6 April I have received payments
from any of the following:
• Jobseeker’s Allowance
• Employment and Support Allowance
• Incapacity Benefit</inlineHelpText>
    <label>Since 6 April I have had another job but</label>
    <type>Checkbox</type>
</CustomField>