force-app/main/default/objects/New_Employee_Info__c/fields/This_is_my_first_job_since_6_April__c.field-meta.xml
<CustomField>
    <fullName>This_is_my_first_job_since_6_April__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is my first job since 6 April and
since the 6 April I’ve not received
payments from any of the following:
• Jobseeker’s Allowance
• Employment and Support Allowance
• Incapacity Benefit</inlineHelpText>
    <label>This is my first job since 6 April</label>
    <type>Checkbox</type>
</CustomField>